# blink

./: .gitignore  ATmega328P.svd  CMakeLists.txt  README.md  main.c
src/: main.c
